--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 																			data-animation-speed="1000"
 																			data-delimiter=""> <span
 																				class="counter">0</span>
-																			<h6>Anno nel<br>CNSAS</h6>
+																			<h6>Anno nel<br>Soccorso Alpino</h6>
 																		</div>
 																	</div>
 																</div>
