--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 																	data-widget_type="vlt-simple-link.default">
 																	<div class="elementor-widget-container"> <a
 																			class="vlt-simple-link" role="button"
-																			href="alecasarola.github.io" download="CV.pdf"> Download CV</a></div>
+																			href="https://alecasarola.github.io/CV.pdf" download="CV.pdf"> Download CV</a></div>
 																</div>
 															</div>
 														</div>
